Se agregó la foto al realizar el alta y se muestra en la grilla.

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ strong, sub, sup, tt, var, legend, fieldset {
 img, fieldset {
 	border: 0;
 }
+
+.fotoGrilla {
+  width: 40px;
+  height: 40px;
+}
+
 .MiBotonUTN {
  display: block;
   text-transform: capitalize;
